  intervals, the health of the mailin system can be monitored by monitoring the
  timestamp on this external file.  (LP #770428)

- Thumbnail view now raises NotFound if it can't extract a thumbnail size from
  the subpath.  (LP #777365)

- Updated the 'Add Page' view to properly relocate temporary images uploaded
  via ImageDrawer.  (LP #782388)

3.57 (2011-05-05)
-----------------

- In mailin, multiple recipients are now allowed for single messages.
  (LP #773426)

- Error monitor now shows referer for Karl exceptions. (LP #777365)

- Stats view now raises NotFound if var/stats/stats.csv is not found.
  (LP #777363)

- Fixed error in reset password form.  (LP #774110)

3.56 (2011-04-28)
-----------------

- Changed text scrubber to only use In-Reply-To header when deciding whether or
  not to scrub text following the Outlook Express message separator as
  opposed to any separator that it knows about.  (LP #757689)

- The `error_monitor_status.txt` view can now accept a request parameter,
  subsystem, which limits the status report to only the subsystem(s) specified.
  The parameter may be included more than once:
  `https://url.of/karl/error_monitor_status.txt?subsystem=mailin&subsystem=mailout`.

3.55 (2011-04-04)
-----------------

- Added 'karl.scripting.only_once' API, to permit cron-driven scripts to
  avoid running again if an earlier instance is still running.
  The lockfile is named '<username>-<progname>', where '<username> is the
  current user's login name, and '<progname>' is a string passed to
  'only_once'.  By default, the lockfile is created in '/var/run/karl/';
  this path can be overridden by setting 'lockdir' in the 'DEFAULT' section
  of the configuration file.

- Ensure that aliases for mailinglist objects are registered / deregistered
  when the mailinglist is added / removed.  (LP #706018).

- Get rid of some deprecation warnings under Python 2.6.

- Change default "People" tab link to '/people' since all instances now get a